<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Reduce Photo Size</string>
    <string name="home_title">Make your photo ready to upload.</string>
    <string name="home_subtitle">Choose a JPEG, set the website limit, and verify the result.</string>
    <string name="choose_photo">Choose photo</string>
    <string name="requirement_title">What\'s the upload limit?</string>
    <string name="make_ready">Make it upload-ready</string>
    <string name="unknown_limit">I don’t know the website limit</string>
    <string name="share">Share</string>
    <string name="save">Save copy</string>
    <string name="another">Compress another</string>
</resources>
